refactored code, placed files in packages and removed redundant functions